--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   color: white;
   background-color: #1b1b1b;
-  box-sizing: border-box;
+  /* TODO: Add box-sizing: border-box to the whole app (using * selector), and CSS variables*/
 }
 
 main {
